# AutoClick

./: CMakeLists.txt  imgui.ini  main.cpp  readme.md
profiles/: capybara 2.json  capybara.json  teste.json
src/: main.cpp
src/actions/: ClickAction.cpp  ClickAction.h
src/actions/interfaces/: IAction.h
src/application/use_cases/: AppCommand.h  AppTypes.h  StartClickingUseCase.cpp  StartClickingUseCase.h  StopClickingUseCase.cpp  StopClickingUseCase.h
src/controller/: Controller.cpp  Controller.h
src/core/: Controller.cpp  Controller.h  CoreTypes.h  Engine.cpp  Engine.h  Registry.cpp  Registry.h
src/core/actions/: ClickAction.cpp  ClickAction.h  MacroRecorder.cpp  MacroRecorder.h  PlayMacroAction.cpp  PlayMacroAction.h
src/core/engine/: Engine.cpp  Engine.h  ExecutionNotifier.h
src/core/interfaces/: IAction.h  IControllerObserver.h  IStrategy.h
src/core/registry/: ActionRegistry.h  StrategyRegistry.h
src/core/strategies/: FixedStrategy.cpp  FixedStrategy.h  JitterStrategy.cpp  JitterStrategy.h
src/input/: InputManager.cpp  InputManager.h
src/models/: Profile.h
src/services/: ProfileManager.cpp  ProfileManager.h
src/strategies/: FixedStrategy.cpp  FixedStrategy.h
src/strategies/interfaces/: IStrategy.h
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
